# torchrs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
examples/: mnist.rs
modparse_derive/: Cargo.toml
modparse_derive/src/: lib.rs
rutorch/: Cargo.toml  build.rs
rutorch/src/: lib.rs  wrapper.h
scripts/: generate_wrappers.py
src/: lib.rs  macros.rs  storage.rs  tensor.rs  tensor_ops.rs
src/autograd/: engine.rs  function.rs  gradcheck.rs  macros.rs  mod.rs  variable.rs  variable_ops.rs
src/autograd/_functions/: mod.rs  tensor.rs
src/autograd/functions/: activation.rs  convolution.rs  dropout.rs  linear.rs  loss.rs  mod.rs  pooling.rs
src/nn/: functional.rs  mod.rs  parameter.rs
src/nn/_functions/: mod.rs
src/nn/_functions/thnn/: activation.rs  convolution.rs  dropout.rs  linear.rs  loss.rs  mod.rs  pooling.rs
src/nn/backends/: backend.rs  mod.rs  thnn.rs
src/nn/modules/: convolution.rs  linear.rs  mod.rs  module.rs
src/optim/: mod.rs  optimizer.rs  sgd.rs
src/tensor/: mod.rs  tensor.rs  tensor_ops.rs  tensorkind_ops.rs
src/test/: common.rs  mod.rs  tests.rs
src/torch/: autograd.rs  mod.rs  serde.rs  tensor.rs
src/utils/: mod.rs  trvalue.rs  unsafe_lib.rs
src/utils/data/: dataloader.rs  dataset.rs  mod.rs  sampler.rs
src/utils/torchvision/: mod.rs
src/utils/torchvision/datasets/: mnist.rs  mod.rs
torchvision/: Cargo.toml
torchvision/src/: lib.rs
