[package]
name = "torchrs"
version = "0.1.0"
authors = ["Matt Macy <mmacy@torch.rs>"]
build = "build.rs"

[dependencies]
rutorch = { path = "rutorch" }
modparse_derive = { path = "modparse_derive"}
num = "^0.1.37"
rand = "^0.3"
derive_builder = "^0.4.7"
getopts = "0.2"
itertools= "0.6"

# torchvision
curl = "0.4"
flate2 = "0.2"

# examples
clap = "2.24"

# serialization support
bincode = "^0.8.0"
serde = "^0.9.7"
serde_derive = "^0.9"